2010-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* */ext/*/extconf.rb: create version header in the current directory.

	* extconf.rb: don't specify --srcdir.

	* */extconf.rb: make other build dir support.

	* extconf.rb: just use top-level extconf.rb.

	* Rakefile (#guess_version): follow Ruby/GLib2 directory structure
	chagne.

	* Rakefile: add description to all tasks.

2010-06-02  Nikolai Weibull

	* gio/: add.

2010-05-04  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GTK2: add Gtk::Buildable#builder_name/set_builder_name.
	Suggested by Simon Arnaud. Thanks!!!

2010-04-17  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: add 0.20.0 place holder.

	* NEWS: Ruby/GTK2: fix Gtk::RecentInfo#application_info's double
	free bug.

	* NEWS: add release note for 0.19.4.

2010-04-09  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GTK2:
	- fixed wrong conversion in Gtk::TreePath#<=>.
	- add Gtk::TreePath#==.
	Reported by Takeuchi Yusuke. Thanks!!!

	* NEWS: Ruby/GLIb2: fixed memory leak in GC.

2010-03-19  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GtkMozEmbed: support XULRunner 1.9.2.
	Reported by OBATA Akio. Thanks!!!

2010-02-28  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GtkMozEmbed: [#2925285] Gtk::MozEmbed#chrome_mask
	fails. [#2925285]
	Reported by tobi. Thanks!!!

	* NEWS: Ruby/GStreamer: [#2924886] implement
	Gst::MessageTag#parse.
	Patch by Vincent Carmona. Thanks!!!

2010-02-12  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GTK2: Gtk::Clipbord#request_text sets UTF-8 encoding
	in Ruby 1.9.
	Suggested by Rg Rg. Thanks!!!

2010-01-17  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/Pango: add Pango::Gravity.
	Patch by Hiroyuki Ito. Thanks!!!

2010-01-16  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GTK2: Gdk::Window#invalidate accepts nil as 'area'
	argument. It means 'invalidates whole window'.
	Patch by Hiroyuki Ito. Thanks!!!

2010-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Ruby/GtkMozEmbed: fix -Wl,-rpath syntax. [#2924766]