@@ -6,8 +6,9 @@ require 'pathname'
 
 source_dir = Pathname(__FILE__).dirname
 base_dir = source_dir.parent.parent.expand_path
-top_dir = base_dir.parent
+top_dir = base_dir.parent.expand_path
 mkmf_gnome2_dir = top_dir + "glib" + 'lib'
+top_build_dir = Pathname(".").parent.parent.parent.expand_path
 
 $LOAD_PATH.unshift(mkmf_gnome2_dir.to_s)
 
@@ -79,10 +80,10 @@ check_cairo(options)
 [["glib", "glib2"],
  ["pango", "pango"]].each do |directory, library_name|
   build_dir = "#{directory}/tmp/#{RUBY_PLATFORM}/#{library_name}/#{RUBY_VERSION}"
-  options = {}
-  options[:target_build_dir] = build_dir if (top_dir + build_dir).exist?
   add_depend_package(library_name, "#{directory}/ext/#{library_name}",
-                     top_dir.to_s, options)
+                     top_dir.to_s,
+                     :top_build_dir => top_build_dir.to_s,
+                     :target_build_dir => build_dir)
 end
 
 add_distcleanfile("rbgdkkeysyms.h")
