@@ -7,6 +7,7 @@ require 'pathname'
 base_dir = Pathname(__FILE__).dirname.parent.parent.expand_path
 top_dir = base_dir.parent
 mkmf_gnome2_dir = top_dir + "glib" + 'lib'
+top_build_dir = Pathname(".").parent.parent.parent.expand_path
 
 $LOAD_PATH.unshift(mkmf_gnome2_dir.to_s)
 
@@ -39,10 +40,10 @@ end
  ["gtk", "gtk2"],
  ["gdkpixbuf", "gdk_pixbuf2"]].each do |directory, library_name|
   build_dir = "#{directory}/tmp/#{RUBY_PLATFORM}/#{library_name}/#{RUBY_VERSION}"
-  options = {}
-  options[:target_build_dir] = build_dir if (top_dir + build_dir).exist?
   add_depend_package(library_name, "#{directory}/ext/#{library_name}",
-                     top_dir.to_s, options)
+                     top_dir.to_s,
+                     :top_build_dir => top_build_dir.to_s,
+                     :target_build_dir => build_dir)
 end
 
 unless have_macro("POPPLER_MAJOR_VERSION", ["poppler.h"])
